--- a/испити/јун23.md
+++ b/испити/јун23.md
@@ -1,10 +1,8 @@
-# Основи програмирања:  2023.
-
-
+# Основи програмирања: јун 2023.
 
 ## Задатак A
 
-Дат је низ транскација Вашег банковног рачуна у току 2022. године. Рачун је био празан на почетку те године, односно биланс је био једнак нули. Свака транскација је дефинисана количином новца и датумом када је извршена. Ако је количина новца негативна изврешено је плаћање, у супротном новац је примљен. То значи да се и трансакција у вредности од 0 динара сматра примњеним новцем. Сваки датум је у формату YYYY-MM-DD: нпр. 2022-05-20 представља 20. мај 2022. године. Додатно, постоји накнада за поседовање картице (изостављена у датој листи трансакција), која износи 5 динара месечно. Ова накнада се одбија од стања на рачуну на крају сваког месеца осим ако су извршене најмање три уплате картицом за укупан трошак од најмање 100 динара у току месеца.
+Дат је низ транскација Вашег банковног рачуна у току 2022. године. Рачун је био празан на почетку те године, односно биланс је био једнак нули. Свака транскација је дефинисана количином новца и датумом када је извршена. Ако је количина новца негативна изврешено је плаћање, у супротном новац је примљен. То значи да се и трансакција у вредности од $0$ динара сматра примњеним новцем. Сваки датум је у формату YYYY-MM-DD: нпр. 2022-05-20 представља 20. мај 2022. године. Додатно, постоји накнада за поседовање картице (изостављена у датој листи трансакција), која износи $5$ динара месечно. Ова накнада се одбија од стања на рачуну на крају сваког месеца осим ако су извршене најмање три уплате картицом за укупан трошак од најмање $100$ динара у току месеца.
 
 Ваш задатак је да израчунате коначни биланс рачуна на крају 2022. године.
 
@@ -49,9 +47,9 @@ print(transakcije(A,D))
 
 ## Задатак B
 
-Дат Вам је низ која садржи само бројеве 0,1 и 2. Ви на сте на позицији 1, а Ваши непријатељи су на позицијама 2. Потребно је израчунати растојање до Вашег најближег непријатеља како бисте дошли до њега. Можете ићи лево и десно. Такође, уколико се налазите на ивици низа, и уколико се померите у правцу те ивице, појавићете се на пољу на супротној страни тог низа.
+Дат Вам је низ која садржи само бројеве $0$,$1$ и $2$. Ви на сте на позицији $1$, а Ваши непријатељи су на позицијама $2$. Потребно је израчунати растојање до Вашег најближег непријатеља како бисте дошли до њега. Можете ићи лево и десно. Такође, уколико се налазите на ивици низа, и уколико се померите у правцу те ивице, појавићете се на пољу на супротној страни тог низа.
 
-Низ садржи произвољан број 0 и 2, али је само једна 1 у њему, такође и не мора садржати број 2, тада би требало вратити 0.
+Низ садржи произвољан број $0$ и $2$, али је само једна $1$ у њему, такође и не мора садржати број $2$, тада би требало вратити $0$.
 
 ### Oпис улаза
 У првом је реду ненегативан цео број n који представља величину низа. У другом реду је се налази низ бројева из поставке задатка.
@@ -87,10 +85,11 @@ print(ClosestEnemyI(array))
 
 ## Задатак C
 
-Имате низ a величине n који се састоји само од нула и јединица и цели број k. У једној операцији можете урадити једно од следећег:
+Имате низ $a$ величине $n$ који се састоји само од нула и јединица и цели број $k$. У једној операцији можете урадити једно од следећег:
 
-* Изаберите 2 узастопна елемента низа a и замените их њиховим минимумом (тј. нека буде a:=[a1,a2,…,ai−1,min(ai,ai+1),ai+2,…,an] за неки 1≤i≤n−1). Ова операција смањује величину низа a за 1.
-* Изаберите k узастопних елемената низа a и замените их њиховим максимумом (тј. нека буде a:=[a1,a2,…,ai−1,max(ai,ai+1,…,ai+k−1),ai+k,…,an] за неки 1≤i≤n−k+1). Ова операција смањује величину низа a за k−1.
+* Изаберите $2$ узастопна елемента низа $a$ и замените их њиховим минимумом (тј. нека буде $a:=[a_1,a_2,\ldots,a_{i-1},\min(a_i,a_{i+1}),a_{i+2},\ldots,a_n]$ за неки $1\leq i\leq n-1$). Ова операција смањује величину низа $a$ за $1$.
+
+* Изаберите $k$ узастопних елемената низа $a$ и замените их њиховим максимумом (тј. неки буде $a:=[a_1,a_2,\ldots,a_{i-1},\max(a_i,a_{i+1},\ldots,a_{i+k-1}),a_{i+k},\ldots,a_n]$ за неки $1\leq i\leq n-k+1$). Ова операција смањује величину низа $a$ за $k-1$.
 
 Одредите да ли је могуће претворити низ a у низ [1] након неколико (евентуално нула) операција.
 
@@ -104,7 +103,7 @@ print(ClosestEnemyI(array))
 
 ### Излазни подаци
 
-За сваки тест случај, ако је могуће претворити низ a у низ [1], исписати "YES", инако исписати "NO".
+За сваки тест случај, ако је могуће претворити низ a у низ $[1]$, исписати "YES", инако исписати "NO".
 
 <details markdown='block'>
 <summary>Решење </summary>
@@ -129,12 +128,12 @@ for _ in range(n):
 
 Пар деценија раније, у 2019. години, ево тебе како програмираш свој будући свемирски брод. Познавајући свој слаб стомак, предвиђаш ситуацију у којој ћеш хитно морати да напустиш ворп-спејс, те желиш да напишеш програм који ће твој број одвести до излаза у што краћем времену.
 
-Ворп-спејс има облик табеле димензија Dx×Dy (Dx је број колона, а Dy је број врста). На једном од поља ворп-спејса се налази твој брод, и на једном од поља се налази излаз (брод и излаз могу бити и на истом пољу). У једној јединици времена твој брод може да пређе на неко од суседна четири поља ворп-спејса (горе, доле, лево или десно). Међутим, ворп-спејс је уврнут, па ако се нађеш на пољу уз његову ивицу и покушаш да се помериш у правцу те ивице, осванућеш на пољу које се налази на супротној страни ворп-спејса. Прецизније, ако се налазиш у првој врсти и покушаш да идеш горе, појавићеш се у истој колони, али у последњој врсти; и обрнуто, ако се налазиш у последњој врсти и покушаш да идеш доле, појавићеш се у истој колони, али у првој врсти. Слично важи и за лево и десно - померањем у лево у првој колони, завршићеш у последњој колони исте врсте; и обрнуто, померањем у десно у последњој колони, завршићеш у првој колони исте врсте.
+Ворп-спејс има облик табеле димензија $D_x \times D_y$ ($D_x$ је број колона, а $D_y$ је број врста). На једном од поља ворп-спејса се налази твој брод, и на једном од поља се налази излаз (брод и излаз могу бити и на истом пољу). У једној јединици времена твој брод може да пређе на неко од суседна четири поља ворп-спејса (горе, доле, лево или десно). Међутим, ворп-спејс је уврнут, па ако се нађеш на пољу уз његову ивицу и покушаш да се помериш у правцу те ивице, осванућеш на пољу које се налази на супротној страни ворп-спејса. Прецизније, ако се налазиш у првој врсти и покушаш да идеш горе, појавићеш се у истој колони, али у последњој врсти; и обрнуто, ако се налазиш у последњој врсти и покушаш да идеш доле, појавићеш се у истој колони, али у првој врсти. Слично важи и за лево и десно - померањем у лево у првој колони, завршићеш у последњој колони исте врсте; и обрнуто, померањем у десно у последњој колони, завршићеш у првој колони исте врсте.
 
 Верујеш да ће твој стомак умирити и просто сазнање колико је твој брод удаљен од излаза из ворп-спејса, па за прву верзију програма желиш да израчунаш само то - минимално потребно време да брод дође до излаза. 
 
 ### Опис улаза
-У првој линији налазе се цели бројеви Dx и Dy, који представљају број колона и број врста ворп-спејса. У другој линији налазе се цели бројеви Ax и Ay, који представљају колону и врсту у којој се налази твој брод. У трећој линији се налазе цели бројеви Bx и By, који представљају колону и врсту у којој се налази излаз. Бројеви врста и колона почињу од 0.
+У првој линији налазе се цели бројеви $D_x$ и $D_y$, који представљају број колона и број врста ворп-спејса. У другој линији налазе се цели бројеви $A_x$ и $A_y$, који представљају колону и врсту у којој се налази твој брод. У трећој линији се налазе цели бројеви $B_x$ и $B_y$, који представљају колону и врсту у којој се налази излаз. Бројеви врста и колона почињу од $0$.
 
 ### Опис излаза
 У јединој линији излаза исписати тачно један број - минимално потребно време да твој брод доведеш до излаза.
@@ -162,21 +161,21 @@ print(min(abs(c-a),m-abs(c-a))+min(abs(d-b),n-abs(d-b)))
 
 ## Задатак E
 
-Познати ТВ кувар Епирка планира следећу сезону своје емисије, у којој ће снимити N емисија о јелима X1,X2,…,XN (не неопходно различитим -- могуће је да снима више емисија о истом јелу). Ради једноставности, представићемо ова јела бројевима (исто од 1 до N): ако Xi=x, i-та емисија ће бити о јелу x.
+Познати ТВ кувар Епирка планира следећу сезону своје емисије, у којој ће снимити $N$ емисија о јелима $X_1,X_2,\ldots,X_N$ (не неопходно различитим -- могуће је да снима више емисија о истом јелу). Ради једноставности, представићемо ова јела бројевима (исто од $1$ до $N$): ако $X_i=x$, $i$-та емисија ће бити о јелу $x$.
 
-На располагању му је N рецепата Y1,Y2,…,YN, исто представљени бројевима. Пошто емисија мора бити занимљива, нису довољни рецепти, већ и сценарио: смислио је (исто) N сценарија Z1,Z2,…,ZK, где Zi=z значи да се i-ти сценарио може користити за емисију у којој ће правити јело Yz.
+На располагању му је $N$ рецепата $Y_1,Y_2,\ldots,Y_N$, исто представљени бројевима. Пошто емисија мора бити занимљива, нису довољни рецепти, већ и сценарио: смислио је (исто) $N$ сценарија $Z_1,Z_2,\ldots,Z_K$, где $Z_i=z$ значи да се $i$-ти сценарио може користити за емисију у којој ће правити јело $Y_z$.
 
-Након што је пописао емисије, јела и рецепте, интересује га на колико начина може да почне снимање, односно на колико начина може да изабере емисију i и сценарио j о рецепту за одговарајуће јело. Другим речима, интересује га број уређених парова (i,j), за које важи Xi=YZj.
+Након што је пописао емисије, јела и рецепте, интересује га на колико начина може да почне снимање, односно на колико начина може да изабере емисију $i$ и сценарио $j$ о рецепту за одговарајуће јело. Другим речима, интересује га број уређених парова $(i,j)$, за које важи $X_i=Y_{Z_j}$.
 
 ### Опис улаза
 
-Први ред стандардног улаза садржи један природан број N: број емисија, рецепата и сценарија.
+Први ред стандардног улаза садржи један природан број $N$: број емисија, рецепата и сценарија.
 
-Други ред садржи N бројева X1,X2,…,XN, где је Xi јело о ком ће снимити i-ту емисију.
+Други ред садржи $N$ бројева $X_1,X_2,\ldots,X_N$, где је $X_i$ јело о ком ће снимити $i$-ту емисију.
 
-Трећи ред садржи N бројева Y1,Y2,…,YN, где је Yј јело које се прави по ј-том рецепту.
+Трећи ред садржи $N$ бројева $Y_1,Y_2,\ldots,Y_N$, где је $Y_j$ јело које се прави по $j$-том рецепту.
 
-Четврти ред садржи N бројева Z1,Z2,…,ZN, где је Zk рецепт који се користи у k-том сценарију. Сценарији су индексирани почев од 1.
+Четврти ред садржи $N$ бројева $Z_1,Z_2,\ldots,Z_N$, где је $Z_k$ рецепт који се користи у $k$-том сценарију. Сценарији су индексирани почев од 1.
 
 ### Опис излаза
 
