--- a/испити/јануар23.md
+++ b/испити/јануар23.md
@@ -4,19 +4,18 @@
 
 На твоју адресу стигла је мистериозна порука од непознатог пошиљаоца. Оно што је посебно необично јесте да је порука послата почетком 2023. године, а ова порука стиже средином децембра 2022. године. Отворивши поруку, видиш да је у прилогу видео запис финала светског првенства у фудбалу, које ће тек бити одиграно, и учествоваће репрезентације Аргентине и Француске. Порука такође садржи и "спојлован" коначан резултат утакмице. Ипак, одлучујеш да погледаш овај необичан видео запис из будућности.
 
-На полувремену утакмице, погледаш тренутни резултат утакмице x:y
-и сетиш се најављеног коначног резултата a:b из поруке. Тог тренутка помислиш да ли је могуће одредити који тим ће следећи дати гол, претпостављајући да је коначан резултат наведен у мистериозној поруци исправан.
+На полувремену утакмице, погледаш тренутни резултат утакмице $x:y$ и сетиш се најављеног коначног резултата $a:b$ из поруке. Тог тренутка помислиш да ли је могуће одредити који тим ће следећи дати гол, претпостављајући да је коначан резултат наведен у мистериозној поруци исправан.
 ### Опис улаза
 
-У првом реду стандардног улаза се налазе два природна броја a и b (спојлован резултат).
-Док се у другом реду стандардног улаза налазе два природна броја x и y.(резултат на полувремену).
+У првом реду стандардног улаза се налазе два природна броја $a$ и $b$ (спојлован резултат).
+Док се у другом реду стандардног улаза налазе два природна броја $x$ и $y$ (резултат на полувремену).
 
 ### Опис излаза
 
 У једином реду стандардног излаза исписати:
 
-*	prvi уколико је могуће закључити да ће први тим (описан бројевима a и x) дати следећи гол
-*	drugi уколико је могуће закључити да ће други тим (описан бројевима b и y) дати следећи гол
+*	prvi уколико је могуће закључити да ће први тим (описан бројевима $a$ и $x$) дати следећи гол
+*	drugi уколико је могуће закључити да ће други тим (описан бројевима $b$ и $y$) дати следећи гол
 *	nijedan уколико је могуће закључити да у наставку утакмице неће бити више ниједног гола
 *	? уколико није могуће једнозначно закључити који тим ће постићи наредни гол
 
@@ -113,7 +112,7 @@ print(transakcije(A,D))
 ## Задатак C
 
 Пењете се уз степенице. Потребно је н корака да се дође до врха.
-Сваки пут се можете попети за 1 или 2 степеника. На колико различитих начина се можете попети на врх?
+Сваки пут се можете попети за $1$ или $2$ степеника. На колико различитих начина се можете попети на врх?
 
 ### Улазни подаци
 
@@ -146,15 +145,15 @@ print(f(n))
 
 ## Задатак D
 
-На једном рачунару се извршава N задатака паралелно. За сваки задатак је познат почетни и крајњи транутак његовог извршавања. Након што задатак заврши са извршавањем он прво мора да сачека да се заврше сви задаци који су почели пре њега пре него што упише свој резултат у меморију. Уписивање у меморију се врши тренутно.
+На једном рачунару се извршава $N$ задатака паралелно. За сваки задатак је познат почетни и крајњи транутак његовог извршавања. Након што задатак заврши са извршавањем он прво мора да сачека да се заврше сви задаци који су почели пре њега пре него што упише свој резултат у меморију. Уписивање у меморију се врши тренутно.
 
-Ваш задатак је да за сваки од N задатака одредите у ком тренутку ће његов резултат бити уписан у меморију.
+Ваш задатак је да за сваки од $N$ задатака одредите у ком тренутку ће његов резултат бити уписан у меморију.
 
 ### Опис улаза
-Први ред стандардног улаза садржи један цео број N. Наредних N редова стандардног улаза садрже два цела броја Ai и Bi, почетни и крајњи тренутак задатка.
+Први ред стандардног улаза садржи један цео број $N$. Наредних $N$ редова стандардног улаза садрже два цела броја $A_i$ и $B_i$, почетни и крајњи тренутак задатка.
 
 ### Опис излаза
-У i -том реду стандардног изалаза исписати тренутак у ком ће i-ти задатак уписати свој резултат.
+У $i$-том реду стандардног изалаза исписати тренутак у ком ће $i$-ти задатак уписати свој резултат.
 
 <details markdown='block'>
 <summary>Решење </summary>
@@ -205,15 +204,15 @@ for task in tasks:
 Гласа се за границу за пролаз на државно такмичење из атлетике. Сви чланови комисије ће написати на папирић неки број, који ће потом убацити у кутију за гласове. Граница ће се одредити тако што ће се узети медијана свих гласова који су убачени у кутију.
 Када је најпопуларнији члан комисије Маркос, познатији као „бог и батина“ дошао да гласа, приметио је да нико не обраћа пажњу на кутију са гласовима. Одлучио је да, након што остатак комисије гласа, дође и провири у кутију, открије шта су остали чланови комисије гласали и затим напише онолико гласова колико је минимално потребно да граница буде баш број X који је он замислио.
 
-Посматрамо Q сценарија где је у i-том сценарију број који је Маркос замислио B[i]. Помозите Маркосу да за сваки сценарио открије колико минимално гласова мора да убаци у кутију за гласове. Гласови који су већ били у кутији су дати низом A, дужине N.
+Посматрамо $Q$ сценарија где је у $i$-том сценарију број који је Маркос замислио $B[i]$. Помозите Маркосу да за сваки сценарио открије колико минимално гласова мора да убаци у кутију за гласове. Гласови који су већ били у кутији су дати низом $A$, дужине $N$.
 
 ### Опис улаза
 
-У првом реду стандардног улаза се налазе два позитивна цела броја N и Q.
+У првом реду стандардног улаза се налазе два позитивна цела броја $N$ и $Q$.
 
-У другом реду се налази низ целих бројева A.
+У другом реду се налази низ целих бројева $A$.
 
-У трећем реду се налази низ целих бројева B.
+У трећем реду се налази низ целих бројева $B$.
 
 ### Опис излаза
 
