Ситне измене у текстовима испита

--- a/испити/септембар23.md
+++ b/испити/септембар23.md
@@ -113,7 +113,7 @@ print(d, e, f)
 
 Не-нула елементи су у истој колони (нека је то колона $k$). Тада елементе у колони $4-k$ трeба изједначити са одговарајућим у колони $k$ (то је једно од могућих решења).
 
-Не-нула елементи су у различитим колонама. Нека су вредности тих елемената $a$ и $b$ (обележени тако да је $a\leq b$). Једно од могућих решења се добија тако што се нула-елемент у колони у којој је $b$ изједначи са $1$, а нула-елемент у колони у којој је $a$ изједначи са $b-a+1$. Лако се проверава да ово решење задовољава све услове задатка. 
+Не-нула елементи су у различитим колонама. Нека су вредности тих елемената $a$ и $b$ (обележени тако да је $a \leq b$). Једно од могућих решења се добија тако што се нула-елемент у колони у којој је $b$ изједначи са $1$, а нула-елемент у колони у којој је $a$ изједначи са $b-a+1$. Лако се проверава да ово решење задовољава све услове задатка. 
 
 </details>
 
@@ -121,7 +121,7 @@ print(d, e, f)
 
 Даници је на зимском распусту постало мало досадно па је обећала да ће за сваки природан број N
 
-који јој другари пошаљу, пронаћи њему најближи цео број чије су цифре гледане с лева ка десно поређане у неопадајућем редоследу, а ако има више таквих бројева, пронаћи ће их све и исписати, очекивано, у неопадајућем редоследу. За $m$-тоцифрен природан број $N$ у декадном запису $N=c_{m−1} \cdot 10^{m−1}+c_{m−2} \cdot 10^{m−2}+\ldots+c_2 \cdot 10^2+c_1 \cdot 10^1+c_0 \cdot 100$ кажемо да је неопадајући ако му број јединица $c_0$ није мањи од броја десетица $c_1$, број десетица $c_1$ није мањи од броја стотина $c_2$, број стотина $c_2$ није мањи од броја хиљада $c_3$, итд. Другим речима природан број је неопадајући ако и само ако за сваки пар суседних цифара $c_i$ и $c_{i−1}$ важи $c_i \lt c_{i−1}$, при чему $0 \lt ti \lt m$ и $c_i \in {0,1,2,3,4,5,6,7,8,9}$.
+који јој другари пошаљу, пронаћи њему најближи цео број чије су цифре гледане с лева ка десно поређане у неопадајућем редоследу, а ако има више таквих бројева, пронаћи ће их све и исписати, очекивано, у неопадајућем редоследу. За $m$-тоцифрен природан број $N$ у декадном запису $N=c_{m−1} \cdot 10^{m−1}+c_{m−2} \cdot 10^{m−2}+\ldots+c_2 \cdot 10^2+c_1 \cdot 10^1+c_0 \cdot 100$ кажемо да је неопадајући ако му број јединица $c_0$ није мањи од броја десетица $c_1$, број десетица $c_1$ није мањи од броја стотина $c_2$, број стотина $c_2$ није мањи од броја хиљада $c_3$, итд. Другим речима природан број је неопадајући ако и само ако за сваки пар суседних цифара $c_i$ и $c_{i−1}$ важи $c_i \lt c_{i−1}$, при чему $0 \lt t_i \lt m$ и $c_i \in \{0,1,2,3,4,5,6,7,8,9\}$.
 
 Како је и њеним другарима та игра постала занимљива, након почетног загревања са двоцифреним и троцифреним, почели су да јој шаљу све веће и веће бројеве. Помозите малој Даници да упркос томе одржи своје обећање.
 
@@ -247,15 +247,10 @@ print(S*cntQ2)
 Због тога је потребно прво извршити упите типа $1$ код којих се вредност елемената увећавају за позитиввну вредност, а затим све упите типа $2$ и на крају упите типа $1$ код којих се вредности елемената увећавају за негативну вредност.
 
 Ако је сума елемената низа износила $S$, онда након примене упита $1\  l\  r\  x$ сума елемената низа износи 
-$$
-S_n = S + (r - l + 1) \cdot x.
-$$
+$S_n = S + (r - l + 1) \cdot x$.
 
 Према томе, потребно је одредити суму свих елемената након примене свих упита типа $1$ код којих се неки елементи увећавају за неку позитивну вредност (нека та сума износи $S_m$) и број упита типа $2$ (нека је то $n_2$).
-Тада ће сума одговора на упите изноосити
-$$
-n_2 \cdot S_m.
-$$
+Тада ће сума одговора на упите изноосити $n_2 \cdot S_m$.
 
 Лако се показује да је сложеност алгоритма $\Theta(n+m)$, где је $n$ број елемената у низу, $m$ укупан број упита.
 
