--- a/испити/фебруар23.md
+++ b/испити/фебруар23.md
@@ -131,7 +131,7 @@ $\lceil \frac{{(N-2)(M-2)}}{2} \rceil$ поља једне, и $\lfloor \frac{{(
 
 ### Излазни подаци
 
-На прву линију стандардног излаза исписати максималну суму новца коју Стојан може имати на крају последњег дана. Гарантује се да ова вредност неће бити већа од $10^10$.
+На прву линију стандардног излаза исписати максималну суму новца коју Стојан може имати на крају последњег дана. Гарантује се да ова вредност неће бити већа од $10^{10}$.
 
 <details markdown='block'>
 <summary>Решење </summary>
@@ -178,7 +178,7 @@ print(M)
 дан гледамо само два суседа), тако да се цео задатак може решити у
 $\mathcal{O}(N)$. Обратите пажњу на први и последњи дан -- пошто имају
 само једног суседа, можемо их или посматрати као специјалне случајеве,
-или додати "вештачке" елементе за дане 0 и N+1, са ценама бесконачно и
+или додати "вештачке" елементе за дане $0$ и $N+1$, са ценама бесконачно и
 минус бесконачно.
 
 Нешто једноставније решење за имплементацију је следеће: за сваки дан
@@ -203,10 +203,10 @@ $\mathcal{O}(N)$. Обратите пажњу на први и последњи 
 Комисију интересује програм који ће, за дате позиције и стабилности зидова, одредити колико ће времена проћи од почетка кретања лоптице до последњег судара са зидом.
 
 ### Опис улаза
-У првом реду дат је један природни број, број зидова $N$. У наредних $N$ редова су дата по два цела броја $X_i$,$S_i$, редом позиција и стабилност $i$-тог зида.
+У првом реду дат је један природни број, број зидова $N$. У наредних $N$ редова су дата по два цела броја $X_i$, $S_i$, редом позиција и стабилност $i$-тог зида.
 
 ### Опис излаза
-У једином реду излаза је потребно исписати број секунди од почетка кретања лоптице до последњег судара са зидом. Како овај број може бити веома велик, испишите његов остатак при дељењу са 10^9+7.
+У једином реду излаза је потребно исписати број секунди од почетка кретања лоптице до последњег судара са зидом. Како овај број може бити веома велик, испишите његов остатак при дељењу са $10^9+7$.
 
 <details markdown='block'>
 <summary>Решење </summary>
