--- a/испити/јун23.md
+++ b/испити/јун23.md
@@ -47,7 +47,7 @@ print(transakcije(A,D))
 
 ## Задатак B
 
-Дат Вам је низ која садржи само бројеве $0$,$1$ и $2$. Ви на сте на позицији $1$, а Ваши непријатељи су на позицијама $2$. Потребно је израчунати растојање до Вашег најближег непријатеља како бисте дошли до њега. Можете ићи лево и десно. Такође, уколико се налазите на ивици низа, и уколико се померите у правцу те ивице, појавићете се на пољу на супротној страни тог низа.
+Дат Вам је низ која садржи само бројеве $0$, $1$ и $2$. Ви на сте на позицији $1$, а Ваши непријатељи су на позицијама $2$. Потребно је израчунати растојање до Вашег најближег непријатеља како бисте дошли до њега. Можете ићи лево и десно. Такође, уколико се налазите на ивици низа, и уколико се померите у правцу те ивице, појавићете се на пољу на супротној страни тог низа.
 
 Низ садржи произвољан број $0$ и $2$, али је само једна $1$ у њему, такође и не мора садржати број $2$, тада би требало вратити $0$.
 
@@ -91,15 +91,15 @@ print(ClosestEnemyI(array))
 
 * Изаберите $k$ узастопних елемената низа $a$ и замените их њиховим максимумом (тј. неки буде $a:=[a_1,a_2,\ldots,a_{i-1},\max(a_i,a_{i+1},\ldots,a_{i+k-1}),a_{i+k},\ldots,a_n]$ за неки $1\leq i\leq n-k+1$). Ова операција смањује величину низа $a$ за $k-1$.
 
-Одредите да ли је могуће претворити низ a у низ [1] након неколико (евентуално нула) операција.
+Одредите да ли је могуће претворити низ a у низ $[1]$ након неколико (евентуално нула) операција.
 
 ### Опис улаза
 
-Сваки тест пример састоји се од више тест случајева. Прва линија сваког тест случаја садржи број тест случајева t (1≤t≤1000). Опис тест случајева следи.
+Сваки тест пример састоји се од више тест случајева. Прва линија сваког тест случаја садржи број тест случајева t $(1 \leq t \leq 1000)$. Опис тест случајева следи.
 
-Прва линија сваког тест случаја садржи два цела броја n и k (2≤k≤n≤50), величину низа a и дужину сегмената на којима можете извршити другу врсту операције.
+Прва линија сваког тест случаја садржи два цела броја $n$ и $k$ $(2 \leq k \leq n \leq 50)$, величину низа $a$ и дужину сегмената на којима можете извршити другу врсту операције.
 
-Друга линија садржи n целих бројева a1,a2,…,an (ai је 0 или 1) раздвојених размаком, елементе низа a.
+Друга линија садржи n целих бројева $a_1,a_2,\ldots,a_n$ ($a_i$ је $0$ или $1$) раздвојених размаком, елементе низа $a$.
 
 ### Излазни подаци
 
