--- a/испити/септембар23.md
+++ b/испити/септембар23.md
@@ -121,7 +121,7 @@ print(d, e, f)
 
 Даници је на зимском распусту постало мало досадно па је обећала да ће за сваки природан број N
 
-који јој другари пошаљу, пронаћи њему најближи цео број чије су цифре гледане с лева ка десно поређане у неопадајућем редоследу, а ако има више таквих бројева, пронаћи ће их све и исписати, очекивано, у неопадајућем редоследу. За $m$-тоцифрен природан број $N$ у декадном запису $N=c_{m−1} \cdot 10^{m−1}+c_{m−2} \cdot 10^{m−2}+\ldots+c_2 \cdot 10^2+c_1 \cdot 10^1+c_0 \cdot 100$ кажемо да је неопадајући ако му број јединица $c_0$ није мањи од броја десетица $c_1$, број десетица $c_1$ није мањи од броја стотина $c_2$, број стотина $c_2$ није мањи од броја хиљада $c_3$, итд. Другим речима природан број је неопадајући ако и само ако за сваки пар суседних цифара $c_i$ и $c_{i−1}$ важи $c_i \lt c_{i−1}$, при чему $0 \lt t_i \lt m$ и $c_i \in \{0,1,2,3,4,5,6,7,8,9\}$.
+који јој другари пошаљу, пронаћи њему најближи цео број чије су цифре гледане с лева ка десно поређане у неопадајућем редоследу, а ако има више таквих бројева, пронаћи ће их све и исписати, очекивано, у неопадајућем редоследу. За $m$-тоцифрен природан број $N$ у декадном запису $N=c_{m−1} \cdot 10^{m−1}+c_{m−2} \cdot 10^{m−2}+\ldots+c_2 \cdot 10^2+c_1 \cdot 10^1+c_0 \cdot 10^0$ кажемо да је неопадајући ако му број јединица $c_0$ није мањи од броја десетица $c_1$, број десетица $c_1$ није мањи од броја стотина $c_2$, број стотина $c_2$ није мањи од броја хиљада $c_3$, итд. Другим речима природан број је неопадајући ако и само ако за сваки пар суседних цифара $c_i$ и $c_{i−1}$ важи $c_i \lt c_{i−1}$, при чему $0 \lt t_i \lt m$ и $c_i \in \{ 0,1,2,3,4,5,6,7,8,9 \}$.
 
 Како је и њеним другарима та игра постала занимљива, након почетног загревања са двоцифреним и троцифреним, почели су да јој шаљу све веће и веће бројеве. Помозите малој Даници да упркос томе одржи своје обећање.
 
